Update stroke examples

--- a/src/pages/docs/stroke.mdx
+++ b/src/pages/docs/stroke.mdx
@@ -13,16 +13,24 @@ export const classes = { plugin }
 
 Use `stroke-current` to set the stroke color of an SVG to the current text color. This makes it easy to set an element's stroke color by combining this class with an existing [text color utility](/docs/text-color).
 
-Useful for styling icon sets like [Feather](https://feathericons.com/) that are drawn entirely with strokes.
+Useful for styling icon sets like [Heroicons](http://heroicons.com/) that are drawn entirely with strokes.
 
-```html
-<template preview class="text-center p-4">
-  <svg class="stroke-current text-purple-500 inline-block h-12 w-12" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-    <circle cx="8" cy="21" r="2" />
-    <circle cx="20" cy="21" r="2" />
-    <path d="M5.67 6H23l-1.68 8.39a2 2 0 0 1-2 1.61H8.75a2 2 0 0 1-2-1.74L5.23 2.74A2 2 0 0 0 3.25 1H1" />
-  </svg>
+```html purple
+<template preview>
+  <div class="text-center">
+    <svg class="stroke-current text-purple-600 inline-block h-12 w-12" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="8" cy="21" r="2" />
+      <circle cx="20" cy="21" r="2" />
+      <path d="M5.67 6H23l-1.68 8.39a2 2 0 0 1-2 1.61H8.75a2 2 0 0 1-2-1.74L5.23 2.74A2 2 0 0 0 3.25 1H1" />
+    </svg>
+  </div>
 </template>
+
+<svg class="**stroke-current text-purple-600** ..." viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+  <circle cx="8" cy="21" r="2" />
+  <circle cx="20" cy="21" r="2" />
+  <path d="M5.67 6H23l-1.68 8.39a2 2 0 0 1-2 1.61H8.75a2 2 0 0 1-2-1.74L5.23 2.74A2 2 0 0 0 3.25 1H1" />
+</svg>
 ```
 
 ## Customizing
