Update stroke width examples

--- a/src/pages/docs/stroke-width.mdx
+++ b/src/pages/docs/stroke-width.mdx
@@ -13,32 +13,34 @@ export const classes = { plugin }
 
 Use the `stroke-{width}` utilities to set the stroke width of an SVG.
 
-Useful for styling icon sets like [Feather](https://feathericons.com/) that are drawn entirely with strokes.
+Useful for styling icon sets like [Heroicons](http://heroicons.com/) that are drawn entirely with strokes.
 
-```html
-<template preview class="text-center p-4">
-  <svg class="stroke-current stroke-1 text-green-500 inline-block h-24 w-24" viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
-    <circle cx="12" cy="12" r="10" />
-    <line x1="14.31" y1="8" x2="20.05" y2="17.94" />
-    <line x1="9.69" y1="8" x2="21.17" y2="8" />
-    <line x1="7.38" y1="12" x2="13.12" y2="2.06" />
-    <line x1="9.69" y1="16" x2="3.95" y2="6.06" />
-    <line x1="14.31" y1="16" x2="2.83" y2="16" />
-    <line x1="16.62" y1="12" x2="10.88" y2="21.94" />
-  </svg>
-  <svg class="stroke-current stroke-2 text-green-500 inline-block h-24 w-24" viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
-    <circle cx="12" cy="12" r="10" />
-    <line x1="14.31" y1="8" x2="20.05" y2="17.94" />
-    <line x1="9.69" y1="8" x2="21.17" y2="8" />
-    <line x1="7.38" y1="12" x2="13.12" y2="2.06" />
-    <line x1="9.69" y1="16" x2="3.95" y2="6.06" />
-    <line x1="14.31" y1="16" x2="2.83" y2="16" />
-    <line x1="16.62" y1="12" x2="10.88" y2="21.94" />
-  </svg>
+```html emerald
+<template preview>
+  <div class="text-center">
+    <svg class="stroke-current stroke-1 text-emerald-600 inline-block h-24 w-24" viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="12" r="10" />
+      <line x1="14.31" y1="8" x2="20.05" y2="17.94" />
+      <line x1="9.69" y1="8" x2="21.17" y2="8" />
+      <line x1="7.38" y1="12" x2="13.12" y2="2.06" />
+      <line x1="9.69" y1="16" x2="3.95" y2="6.06" />
+      <line x1="14.31" y1="16" x2="2.83" y2="16" />
+      <line x1="16.62" y1="12" x2="10.88" y2="21.94" />
+    </svg>
+    <svg class="stroke-current stroke-2 text-emerald-600 inline-block h-24 w-24" viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="12" r="10" />
+      <line x1="14.31" y1="8" x2="20.05" y2="17.94" />
+      <line x1="9.69" y1="8" x2="21.17" y2="8" />
+      <line x1="7.38" y1="12" x2="13.12" y2="2.06" />
+      <line x1="9.69" y1="16" x2="3.95" y2="6.06" />
+      <line x1="14.31" y1="16" x2="2.83" y2="16" />
+      <line x1="16.62" y1="12" x2="10.88" y2="21.94" />
+    </svg>
+  </div>
 </template>
 
-<svg class="stroke-current stroke-1 text-green-500 ..."></svg>
-<svg class="stroke-current stroke-2 text-green-500 ..."></svg>
+<svg class="stroke-current **stroke-1** text-green-600 ..."></svg>
+<svg class="stroke-current **stroke-2** text-green-600 ..."></svg>
 ```
 
 ## Responsive
