--- a/src/pages/docs/stroke.mdx
+++ b/src/pages/docs/stroke.mdx
@@ -26,11 +26,7 @@ Useful for styling icon sets like [Heroicons](http://heroicons.com/) that are dr
   </div>
 </template>
 
-<svg class="**stroke-current text-purple-600** ..." viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-  <circle cx="8" cy="21" r="2" />
-  <circle cx="20" cy="21" r="2" />
-  <path d="M5.67 6H23l-1.68 8.39a2 2 0 0 1-2 1.61H8.75a2 2 0 0 1-2-1.74L5.23 2.74A2 2 0 0 0 3.25 1H1" />
-</svg>
+<svg class="**stroke-current text-purple-600** ..."></svg>
 ```
 
 ## Customizing
