--- a/src/pages/docs/transform.mdx
+++ b/src/pages/docs/transform.mdx
@@ -13,26 +13,26 @@ export const classes = { plugin }
 
 To enable transformations you have to add the `transform` utility.
 
-```html
+```html amber
 <template preview class="bg-white lg:flex justify-around items-center text-sm p-4 py-12">
-  <div class="bg-gray-600">
+  <div class="bg-amber-600 bg-stripes bg-stripes-white">
     <img class="h-16 w-16 transform rotate-45" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
   </div>
-  <div class="bg-gray-600">
+  <div class="bg-amber-600 bg-stripes bg-stripes-white">
     <img class="h-16 w-16 transform skew-y-12" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
   </div>
-  <div class="bg-gray-600">
+  <div class="bg-amber-600 bg-stripes bg-stripes-white">
     <img class="h-16 w-16 transform scale-50" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
   </div>
-  <div class="bg-gray-600">
+  <div class="bg-amber-600 bg-stripes bg-stripes-white">
     <img class="h-16 w-16 transform translate-x-4 translate-y-4" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
   </div>
 </template>
 
-<img class="transform rotate-45 ...">
-<img class="transform skew-y-12 ...">
-<img class="transform scale-50 ...">
-<img class="transform translate-x-4 translate-y-4 ...">
+<img class="**transform** rotate-45 ...">
+<img class="**transform** skew-y-12 ...">
+<img class="**transform** scale-50 ...">
+<img class="**transform** translate-x-4 translate-y-4 ...">
 ```
 
 ## Hardware acceleration
@@ -40,7 +40,7 @@ To enable transformations you have to add the `transform` utility.
 A lot of transformations can be executed on the GPU instead of the CPU. This enables better performance. You can use the `transform-gpu` utility to enable GPU Acceleration.
 
 ```html
-<div class="transform-gpu scale-150 ..."></div>
+<div class="**transform-gpu** scale-150 ..."></div>
 ```
 
 ## None
@@ -48,7 +48,7 @@ A lot of transformations can be executed on the GPU instead of the CPU. This ena
 If you want to disable transformations, then you can use the `transform-none` utility.
 
 ```html
-<div class="transform rotate-45 lg:transform-none ..."></div>
+<div class="transform rotate-45 **lg:transform-none** ..."></div>
 ```
 
 ## Responsive
@@ -56,7 +56,7 @@ If you want to disable transformations, then you can use the `transform-none` ut
 To enable or disable transforms at a specific breakpoint, add a `{screen}:` prefix to any of the transform utilities. For example, use `md:transform` to apply the `transform` utility at only medium screen sizes and above.
 
 ```html
-<img class="transform sm:transform-gpu md:transform-none ...">
+<img class="transform **sm:transform-gpu md:transform-none** ...">
 ```
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
