--- a/src/pages/docs/scale.mdx
+++ b/src/pages/docs/scale.mdx
@@ -13,18 +13,28 @@ export const classes = { plugin }
 
 Control the scale of an element by first enabling transforms with the `transform` utility, then specifying the scale using the `scale-{percentage}`, `scale-x-{percentage}`, and `scale-y-{percentage}` utilities.
 
-```html
-<template preview class="bg-white lg:flex justify-around items-center text-sm p-4 py-12">
-  <img class="h-16 w-16 rounded transform scale-75" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  <img class="h-16 w-16 rounded transform scale-100" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  <img class="h-16 w-16 rounded transform scale-125" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  <img class="h-16 w-16 rounded transform scale-150" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+```html fuchsia
+<template preview>
+  <div class="flex flex-col justify-around space-y-12 md:flex-row md:space-y-0 md:space-x-12">
+    <div class="w-16 h-16 bg-fuchsia-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 scale-75 transform" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-fuchsia-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 scale-100 transform" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-fuchsia-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 scale-125 transform" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-fuchsia-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 scale-150 transform" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+  </div>
 </template>
 
-<img class="transform scale-75 ...">
-<img class="transform scale-100 ...">
-<img class="transform scale-125 ...">
-<img class="transform scale-150 ...">
+<img class="transform **scale-75** ...">
+<img class="transform **scale-100** ...">
+<img class="transform **scale-125** ...">
+<img class="transform **scale-150** ...">
 ```
 
 Note that because Tailwind implements transforms using [CSS custom properties](https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties), **the transform utilities are not supported in older browsers like IE11**. If you need transforms for your project and need to support older browsers, [add your own utilities](/docs/adding-new-utilities) or other custom CSS.
