Update skew examples

--- a/src/pages/docs/skew.mdx
+++ b/src/pages/docs/skew.mdx
@@ -13,12 +13,22 @@ export const classes = { plugin }
 
 Skew an element by first enabling transforms with the `transform` utility, then specifying the skew angle using the `skew-x-{amount}` and `skew-y-{amount}` utilities.
 
-```html
-<template preview class="bg-white lg:flex justify-around items-center text-sm p-4 py-12">
-  <img class="h-16 w-16 rounded transform skew-y-0" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  <img class="h-16 w-16 rounded transform skew-y-3" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  <img class="h-16 w-16 rounded transform skew-y-6" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  <img class="h-16 w-16 rounded transform skew-y-12" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+```html indigo
+<template preview>
+  <div class="flex flex-col justify-around space-y-12 md:flex-row md:space-y-0 md:space-x-12">
+    <div class="w-16 h-16 bg-indigo-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 skew-y-0 transform" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-indigo-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 skew-y-3 transform" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-indigo-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 skew-y-6 transform" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-indigo-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 skew-y-12 transform" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+  </div>
 </template>
 
 <img class="transform skew-y-0 ...">
