--- a/src/pages/docs/transform.mdx
+++ b/src/pages/docs/transform.mdx
@@ -14,18 +14,20 @@ export const classes = { plugin }
 To enable transformations you have to add the `transform` utility.
 
 ```html amber
-<template preview class="bg-white lg:flex justify-around items-center text-sm p-4 py-12">
-  <div class="bg-amber-600 bg-stripes bg-stripes-white">
-    <img class="h-16 w-16 transform rotate-45" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  </div>
-  <div class="bg-amber-600 bg-stripes bg-stripes-white">
-    <img class="h-16 w-16 transform skew-y-12" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  </div>
-  <div class="bg-amber-600 bg-stripes bg-stripes-white">
-    <img class="h-16 w-16 transform scale-50" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  </div>
-  <div class="bg-amber-600 bg-stripes bg-stripes-white">
-    <img class="h-16 w-16 transform translate-x-4 translate-y-4" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+<template preview>
+  <div class="flex flex-col justify-around space-y-12 md:flex-row md:space-y-0 md:space-x-12">
+    <div class="w-16 h-16 bg-amber-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 transform rotate-45" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-amber-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 transform skew-y-12" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-amber-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 transform scale-50" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-amber-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 transform translate-x-4 translate-y-4" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
   </div>
 </template>
 
