--- a/src/pages/docs/translate.mdx
+++ b/src/pages/docs/translate.mdx
@@ -13,16 +13,24 @@ export const classes = { plugin }
 
 Translate an element by first enabling transforms with the `transform` utility, then specifying the translate direction and distance using the `translate-x-{amount}` and `translate-y-{amount}` utilities.
 
-```html
-<template preview class="bg-white lg:flex justify-around items-center text-sm p-4 py-12">
-  <img class="h-16 w-16 rounded transform translate-y-6" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  <img class="h-16 w-16 rounded transform -translate-y-6" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
-  <img class="h-16 w-16 rounded transform translate-y-0" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+```html purple
+<template preview>
+  <div class="flex flex-col justify-around space-y-12 md:flex-row md:space-y-0 md:space-x-12">
+    <div class="w-16 h-16 bg-purple-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 transform translate-y-6" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-purple-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 transform -translate-y-6" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+    <div class="w-16 h-16 bg-purple-400 bg-stripes bg-stripes-white">
+      <img class="h-16 w-16 transform translate-y-0" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
+    </div>
+  </div>
 </template>
 
-<img class="transform translate-y-6 ...">
-<img class="transform -translate-y-6 ...">
-<img class="transform translate-y-0 ...">
+<img class="transform **translate-y-6** ...">
+<img class="transform **-translate-y-6** ...">
+<img class="transform **translate-y-0** ...">
 ```
 
 Note that because Tailwind implements transforms using [CSS custom properties](https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties), **the transform utilities are not supported in older browsers like IE11**. If you need transforms for your project and need to support older browsers, [add your own utilities](/docs/adding-new-utilities) or other custom CSS.
