--- a/src/pages/docs/transition-delay.mdx
+++ b/src/pages/docs/transition-delay.mdx
@@ -13,22 +13,24 @@ export const classes = { plugin }
 
 Use the `delay-{amount}` utilities to control an element's transition-delay.
 
-```html
-<template preview class="bg-white flex justify-around items-center p-4 py-12">
-  <button class="transition delay-150 duration-300 ease-in-out transform hover:scale-125 bg-blue-500 text-white font-bold py-2 px-4 rounded">
-    Hover me
-  </button>
-  <button class="transition delay-300 duration-300 ease-in-out transform hover:scale-125 bg-blue-500 text-white font-bold py-2 px-4 rounded">
-    Hover me
-  </button>
-  <button class="transition delay-700 duration-300 ease-in-out transform hover:scale-125 bg-blue-500 text-white font-bold py-2 px-4 rounded">
-    Hover me
-  </button>
+```html amber
+<template preview>
+  <div class="flex justify-around items-center">
+    <button class="transition delay-150 duration-300 ease-in-out transform hover:scale-125 bg-amber-600 text-white font-semibold px-6 py-3 rounded-md">
+      Hover me
+    </button>
+    <button class="transition delay-300 duration-300 ease-in-out transform hover:scale-125 bg-amber-600 text-white font-semibold px-6 py-3 rounded-md">
+      Hover me
+    </button>
+    <button class="transition delay-700 duration-300 ease-in-out transform hover:scale-125 bg-amber-600 text-white font-semibold px-6 py-3 rounded-md">
+      Hover me
+    </button>
+  </div>
 </template>
 
-<button class="transition delay-150 duration-300 ease-in-out ...">Hover me</button>
-<button class="transition delay-300 duration-300 ease-in-out ...">Hover me</button>
-<button class="transition delay-700 duration-300 ease-in-out ...">Hover me</button>
+<button class="transition **delay-150** duration-300 ease-in-out ...">Hover me</button>
+<button class="transition **delay-300** duration-300 ease-in-out ...">Hover me</button>
+<button class="transition **delay-700** duration-300 ease-in-out ...">Hover me</button>
 ```
 
 ## Responsive
