Update transition property examples

--- a/src/pages/docs/transition-property.mdx
+++ b/src/pages/docs/transition-property.mdx
@@ -13,14 +13,16 @@ export const classes = { plugin }
 
 Use the `transition-{properties}` utilities to specify which properties should transition when they change.
 
-```html
-<template preview class="bg-white text-center p-4 py-12">
-  <button class="transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 bg-blue-500 hover:bg-red-500 text-white font-bold py-2 px-4 rounded">
-    Hover me
-  </button>
+```html lightBlue
+<template preview>
+  <div class="text-center">
+    <button class="transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 bg-blue-600 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-md">
+      Hover me
+    </button>
+  </div>
 </template>
 
-<button class="transition duration-500 ease-in-out bg-blue-500 hover:bg-red-500 transform hover:-translate-y-1 hover:scale-110 ...">
+<button class="**transition** duration-500 ease-in-out bg-blue-600 hover:bg-red-600 transform hover:-translate-y-1 hover:scale-110 ...">
   Hover me
 </button>
 ```
@@ -30,7 +32,7 @@ Use the `transition-{properties}` utilities to specify which properties should t
 You can conditionally apply animations and transitions using the `motion-safe` and `motion-reduce` variants:
 
 ```html
-<button class="transition transform hover:-translate-y-1 motion-reduce:transition-none motion-reduce:transform-none ...">
+<button class="transition transform hover:-translate-y-1 **motion-reduce:transition-none motion-reduce:transform-none** ...">
   Hover me
 </button>
 ```
