Update transition timing function examples

--- a/src/pages/docs/transition-timing-function.mdx
+++ b/src/pages/docs/transition-timing-function.mdx
@@ -13,22 +13,24 @@ export const classes = { plugin }
 
 Use the `ease-{timing}` utilities to control an element's easing curve.
 
-```html
-<template preview class="bg-white flex justify-around items-center p-4 py-12">
-  <button class="transition duration-700 ease-in transform hover:scale-125 bg-blue-500 text-white font-bold py-2 px-4 rounded">
-    Hover me
-  </button>
-  <button class="transition duration-700 ease-out transform hover:scale-125 bg-blue-500 text-white font-bold py-2 px-4 rounded">
-    Hover me
-  </button>
-  <button class="transition duration-700 ease-in-out transform hover:scale-125 bg-blue-500 text-white font-bold py-2 px-4 rounded">
-    Hover me
-  </button>
+```html indigo
+<template preview>
+  <div class="flex justify-around items-center">
+    <button class="transition duration-700 ease-in transform hover:scale-125 bg-indigo-600 text-white font-semibold py-3 px-6 rounded-md">
+      Hover me
+    </button>
+    <button class="transition duration-700 ease-out transform hover:scale-125 bg-indigo-600 text-white font-semibold py-3 px-6 rounded-md">
+      Hover me
+    </button>
+    <button class="transition duration-700 ease-in-out transform hover:scale-125 bg-indigo-600 text-white font-semibold py-3 px-6 rounded-md">
+      Hover me
+    </button>
+  </div>
 </template>
 
-<button class="transition ease-in duration-700 ...">Hover me</button>
-<button class="transition ease-out duration-700 ...">Hover me</button>
-<button class="transition ease-in-out duration-700 ...">Hover me</button>
+<button class="transition **ease-in** duration-700 ...">Hover me</button>
+<button class="transition **ease-out** duration-700 ...">Hover me</button>
+<button class="transition **ease-in-out** duration-700 ...">Hover me</button>
 ```
 
 ## Responsive
