--- a/src/pages/docs/line-height.mdx
+++ b/src/pages/docs/line-height.mdx
@@ -19,90 +19,90 @@ export const classes = { plugin }
 
 Use the `leading-none`, `leading-tight`, `leading-snug`, `leading-normal`, `leading-relaxed`, and `leading-loose` utilities to give an element a relative line-height based on its current font-size.
 
-```html
+```html purple
 <template preview>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-none</p>
-    <p class="leading-none text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-purple-600">.leading-none</p>
+    <p class="leading-none text-purple-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-tight</p>
-    <p class="leading-tight text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-purple-600">.leading-tight</p>
+    <p class="leading-tight text-purple-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-snug</p>
-    <p class="leading-snug text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-purple-600">.leading-snug</p>
+    <p class="leading-snug text-purple-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-normal</p>
-    <p class="leading-normal text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-purple-600">.leading-normal</p>
+    <p class="leading-normal text-purple-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-relaxed</p>
-    <p class="leading-relaxed text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-purple-600">.leading-relaxed</p>
+    <p class="leading-relaxed text-purple-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div>
     <p class="text-sm text-gray-600">.leading-loose</p>
-    <p class="leading-loose text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="leading-loose text-purple-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
 </template>
 
-<p class="leading-none ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-tight ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-snug ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-normal ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-relaxed ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-loose ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-none** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-tight** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-snug** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-normal** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-relaxed** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-loose** ...">Lorem ipsum dolor sit amet ...</p>
 ```
 
 ## Fixed line-heights
 
 Use the `leading-{size}` utilities to give an element a fixed line-height, irrespective of the current font-size. These are useful when you need very precise control over an element's final size.
 
-```html
+```html emerald
 <template preview>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-3</p>
-    <p class="leading-3 text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-emerald-600">.leading-3</p>
+    <p class="leading-3 text-emerald-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-4</p>
-    <p class="leading-4 text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-emerald-600">.leading-4</p>
+    <p class="leading-4 text-emerald-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-5</p>
-    <p class="leading-5 text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-emerald-600">.leading-5</p>
+    <p class="leading-5 text-emerald-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-6</p>
-    <p class="leading-6 text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-emerald-600">.leading-6</p>
+    <p class="leading-6 text-emerald-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-7</p>
-    <p class="leading-7 text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-emerald-600">.leading-7</p>
+    <p class="leading-7 text-emerald-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-8</p>
-    <p class="leading-8 text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-emerald-600">.leading-8</p>
+    <p class="leading-8 text-emerald-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.leading-9</p>
-    <p class="leading-9 text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-emerald-600">.leading-9</p>
+    <p class="leading-9 text-emerald-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div>
-    <p class="text-sm text-gray-600">.leading-10</p>
-    <p class="leading-10 text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
+    <p class="mb-1 text-sm text-emerald-600">.leading-10</p>
+    <p class="leading-10 text-emerald-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
 </template>
 
-<p class="leading-3 ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-4 ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-5 ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-6 ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-7 ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-8 ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-9 ...">Lorem ipsum dolor sit amet ...</p>
-<p class="leading-10 ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-3** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-4** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-5** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-6** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-7** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-8** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-9** ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**leading-10** ...">Lorem ipsum dolor sit amet ...</p>
 ```
 
 ## Responsive
